--- a/src/app/entrepreneur/entrepreneur.page.html
+++ b/src/app/entrepreneur/entrepreneur.page.html
@@ -16,6 +16,7 @@
           </ion-card-content>
           <ion-row class="cardfooter ion-padding-start">
             <ion-col>
+              <a  [routerLink]="['/project/vn8vuMTBmNHBl377mRcl']" >{{'ENTREPENEUR.SeeAstarterProject' | translate}} </a>
             </ion-col>
           </ion-row>
         </ion-card>
