--- a/src/app/project/executive/executive.page.html
+++ b/src/app/project/executive/executive.page.html
@@ -8,7 +8,7 @@
 				<ion-label>{{'EXECUTIVE.Dashboard' | translate }}</ion-label>
 			</ion-tab-button>
 			<ion-tab-button tab="timeline" >
-				<ion-icon name="alarm-outline" class=""></ion-icon>
+				<ion-icon name="calendar-outline"></ion-icon>
 				<ion-label  class="">{{'EXECUTIVE.Timeline' | translate }}</ion-label>
 			</ion-tab-button>
 			<ion-tab-button tab="team">
