--- a/src/app/project/executive/summary/summary.page.html
+++ b/src/app/project/executive/summary/summary.page.html
@@ -1,16 +1,29 @@
 <ion-content>
 	<ion-card>
 		<div class="timeline">
+			<ion-grid>
+				<ion-row>
+					<ion-col *ngFor="let timelineStatElement of timelineStat; let last = last;" class="ion-margin ion-padding" [ngClass]="{'done': timelineStatElement.status === 'done',
+						'ongoing': timelineStatElement.status === 'ongoing',
+						'todo': timelineStatElement.status === 'todo'}" 
+						 [routerLink]="['/project/'+projectId+ '/details/executive/tabs/timeline']">
+						<ion-icon [name]="timelineStatElement.icon" ></ion-icon>
+						<ion-badge>{{timelineStatElement.completedElements}}/{{timelineStatElement.totalElements}} </ion-badge>
+						<h1>{{timelineStatElement.title}}</h1>
+						<ion-icon class="move ion-hide-sm-down" name="caret-forward-outline" *ngIf="!last"></ion-icon>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
 		</div>
 		<ion-card-content class="projectCard">
 			<ion-list>
 				<ion-item lines="none">
-					<ion-text position="floating" class="ion-hide-sm-down labelTop">{{'PROJECT_SUMMARY.ProjectElevatorPitch' | translate }}
+					<ion-text position="floating" class="ion-hide-sm-down labelTop" >{{'PROJECT_SUMMARY.ProjectElevatorPitch' | translate }}
 					<ion-icon color="primary" name="help-circle-outline"  tooltip="{{'PROJECT_SUMMARY.ProjectElevatorPitchTooltip' | translate }}"></ion-icon>
 				</ion-text>
 					<ion-item class="input">
 
-						<ion-textarea class="ion-text-justify  " [(ngModel)]="project.summary.elevatorPitch" placeholder="{{'PROJECT_SUMMARY.ProjectElevatorPitchPlaceholder' | translate }}" (ionChange)="updateProject()"></ion-textarea>
+						<ion-textarea class="ion-text-justify  " [(ngModel)]="project.summary.elevatorPitch" placeholder="{{'PROJECT_SUMMARY.ProjectElevatorPitchPlaceholder' | translate }}" (ionChange)="updateProject()" [readonly]="accessRights.write === false"></ion-textarea>
 					</ion-item>
 					
 				</ion-item>
@@ -19,7 +32,7 @@
 						<ion-icon color="primary" name="help-circle-outline"  tooltip="{{'PROJECT_SUMMARY.ProjectWebsiteUrlTooltip' | translate }}"></ion-icon>
 					</ion-text>
 					<ion-item class="input">
-						<ion-input type="text" name="websiteUrl" class="ion-text-justify  " [(ngModel)]="project.summary.websiteUrl" placeholder="{{'PROJECT_SUMMARY.ProjectWebsiteUrlPlaceholder' | translate }}" (ionChange)="updateProject()"></ion-input>
+						<ion-input type="text" name="websiteUrl" class="ion-text-justify  " [(ngModel)]="project.summary.websiteUrl" placeholder="{{'PROJECT_SUMMARY.ProjectWebsiteUrlPlaceholder' | translate }}" [readonly]="accessRights.write === false" (ionChange)="updateProject()"></ion-input>
 					</ion-item>
 				</ion-item>
 				<ion-item lines="none" class="ion-margin-top">
@@ -32,22 +45,17 @@
 						<ion-row>
 							<ion-col *ngFor="let socialNetwork of socialNetworks">
 								<div class="socialNetwork ion-padding ion-text-center" *ngIf="project.summary.socialNetworks !== undefined && project.summary.socialNetworks[socialNetwork.type] !== undefined && project.summary.socialNetworks[socialNetwork.type].link !== null ">
-
 									<a href="{{project.summary.socialNetworks[socialNetwork.type].link}}" target="_blank" class="link"><ion-icon name="link-outline"></ion-icon></a>
-
-									<div class="icon ion-text-center " (click)="requestAddPage(socialNetwork.type,'update')">
+									<div class="icon ion-text-center " (click)="requestAddPage(socialNetwork.type,'update')" >
 										<ion-icon name="logo-{{socialNetwork.type}}" class="filled" ></ion-icon>			
 									</div>
-
 									<div class="actions">
-
 									</div>
 								</div>
 								<div class="socialNetwork ion-padding ion-text-center" *ngIf="project.summary.socialNetworks === undefined  ||project.summary.socialNetworks[socialNetwork.type] === undefined  || project.summary.socialNetworks[socialNetwork.type].link === null" (click)="requestAddPage(socialNetwork.type,'add')" >
 									<div class="icon ion-text-center">
 										<ion-icon name="logo-{{socialNetwork.type}}" class="notFilled"></ion-icon>
 									</div>
-
 								</div>
 							</ion-col>
 						</ion-row>
@@ -66,42 +74,79 @@
 			<ion-grid>
 				<ion-row >
 					<ion-col >
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="Problem" [elementData]="project.businessCanvas.problem" elementStyle="smallerCell"></app-business-canvas-element>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="ExistingAlternatives" [elementData]="project.businessCanvas.existingAlternatives" elementStyle="smallerCell"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="Problem" 
+						[elementData]="project.businessCanvas.problem" 
+						[accessRights]="accessRights" elementStyle="smallerCell"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell"
+						 elementType="ExistingAlternatives" 
+						 [elementData]="project.businessCanvas.existingAlternatives"
+						 [accessRights]="accessRights"
+						  elementStyle="smallerCell"></app-business-canvas-element>
 					</ion-col>
 					<ion-col >
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="Solution" [elementData]="project.businessCanvas.solution" elementStyle="smallerCell"></app-business-canvas-element>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="KeyMetrics" [elementData]="project.businessCanvas.keyMetrics" elementStyle="smallerCell"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="Solution" 
+						[elementData]="project.businessCanvas.solution" 
+						[accessRights]="accessRights"
+						elementStyle="smallerCell"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="KeyMetrics" 
+						[elementData]="project.businessCanvas.keyMetrics"
+						[accessRights]="accessRights"
+						 elementStyle="smallerCell"></app-business-canvas-element>
 					</ion-col>
 					<ion-col>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="UniqueValueProposition" [elementData]="project.businessCanvas.usp" elementStyle="highCell"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="UniqueValueProposition" 
+						[elementData]="project.businessCanvas.usp"
+						[accessRights]="accessRights"
+						elementStyle="highCell"></app-business-canvas-element>
 					</ion-col>
 					<ion-col>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="UnfairAdvantage" [elementData]="project.businessCanvas.unfairAdvantage"  elementStyle="smallerCell" ></app-business-canvas-element>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="Channels" [elementData]="project.businessCanvas.channels"  elementStyle="smallerCell"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="UnfairAdvantage" 
+						[elementData]="project.businessCanvas.unfairAdvantage"
+						[accessRights]="accessRights"
+						elementStyle="smallerCell" ></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="Channels" 
+						[elementData]="project.businessCanvas.channels"
+						[accessRights]="accessRights"
+						elementStyle="smallerCell"></app-business-canvas-element>
 					</ion-col>
 					<ion-col  >
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="CustomerSegmentation" [elementData]="project.businessCanvas.customerSegmentation" elementStyle="smallerCell"></app-business-canvas-element>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="EarlyAdopters" [elementData]="project.businessCanvas.earlyAdopters" elementStyle="smallerCell"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="CustomerSegmentation" 
+						[elementData]="project.businessCanvas.customerSegmentation"
+						[accessRights]="accessRights"
+						elementStyle="smallerCell"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="EarlyAdopters" 
+						[elementData]="project.businessCanvas.earlyAdopters" 
+						[accessRights]="accessRights"
+						elementStyle="smallerCell"></app-business-canvas-element>
 					</ion-col>
 				</ion-row>
 				<ion-row>
 					<ion-col>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="CostStructure" elementStyle="smallerCell" [elementData]="project.businessCanvas.costStructure"></app-business-canvas-element>	
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="CostStructure" elementStyle="smallerCell" 
+						[elementData]="project.businessCanvas.costStructure"
+						[accessRights]="accessRights"></app-business-canvas-element>	
 					</ion-col>
 					<ion-col>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="RevenueStreams" elementStyle="smallerCell" [elementData]="project.businessCanvas.revenueStreams"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="RevenueStreams" elementStyle="smallerCell" 
+						[elementData]="project.businessCanvas.revenueStreams"
+						[accessRights]="accessRights"></app-business-canvas-element>
 					</ion-col>
 				</ion-row>
 				<ion-row>
 					<ion-col>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="KeyActivities" elementStyle="smallerCell" [elementData]="project.businessCanvas.keyActivities"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="KeyActivities" elementStyle="smallerCell" 
+						[elementData]="project.businessCanvas.keyActivities"
+						[accessRights]="accessRights"></app-business-canvas-element>
 					</ion-col>
 					<ion-col>
-						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="KeyResources" elementStyle="smallerCell" [elementData]="project.businessCanvas.keyResources"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" class="smallerCell" elementType="KeyResources" elementStyle="smallerCell" 
+						[elementData]="project.businessCanvas.keyResources"
+						[accessRights]="accessRights"></app-business-canvas-element>
 					</ion-col>
 					<ion-col>
-						<app-business-canvas-element (changed)="elementUpdated($event)" elementType="KeyPartners" elementStyle="smallerCell" [elementData]="project.businessCanvas.keyPartners"></app-business-canvas-element>
+						<app-business-canvas-element (changed)="elementUpdated($event)" elementType="KeyPartners" elementStyle="smallerCell" 
+						[elementData]="project.businessCanvas.keyPartners"
+						[accessRights]="accessRights"></app-business-canvas-element>
 					</ion-col>
 				</ion-row>
 			</ion-grid>
