--- a/src/app/tools/tools.page.scss
+++ b/src/app/tools/tools.page.scss
@@ -44,10 +44,50 @@
 .bold{
 	font-weight:bold;
 }
-.gridTools{
-	max-width:1500px;
-	margin-top:90px;
+.toolsGridLayout{
+	.toolsContent{
+		min-width:300px;
 
+
+	}
+	.categories{
+		min-width:200px;
+		max-width: 300px;	
+		@media(max-width:610px) {
+			width:100%;
+			max-width:100%;
+
+		}		
+	}
+}
+ion-searchbar{
+	@media(max-width:610px) {
+		padding:0px;
+	}
+}
+.filter{
+	@media(max-width:610px) {
+		margin-bottom: 	5px;
+	}
+	.filterHeader{
+		color: var(--ion-color-primary-contrast);
+		background-color: var(--ion-color-primary);
+		width:100%;
+		cursor:pointer;
+		ion-icon{
+			text-align: right;
+			position: absolute;
+			right: 18px;
+			font-size: 	20px;
+		}
+	}
+	.filterContent{
+		max-height: 500px;
+		overflow: 	auto;
+	}
+}
+
+.gridTools{
 	margin-left: auto;
 	margin-right: auto;
 	.toolCol{
@@ -68,12 +108,9 @@
 	}
 	@media(max-width:1200px) {
 		max-width:1060px;
-		margin-top:145px;
-
 		
 	}
 	@media(max-width: 800px) {
-		margin-top:25px;
 		.toolCol{
 			--width:100%;
 			min-width:100%;
@@ -96,6 +133,9 @@
 			height:auto;
 			font-size:0.8em;
 		}
+	}
+	.loadingCol{
+		padding-top:30px;
 	}	
 }
 
