--- a/src/app/project/executive/timeline/time-element/time-element.component.scss
+++ b/src/app/project/executive/timeline/time-element/time-element.component.scss
@@ -1,5 +1,7 @@
 .timelineElement{
 	--background:none;
+	
+
 	.icon{
 		background:var(--ion-color-primary-contrast);
 		border:var(--ion-color-primary) 2px solid;
@@ -13,18 +15,55 @@
 	.dateColumn{
 		max-width:100px;
 	}
+	@media(max-width: 768px) {
+		font-size: 	small;
+		.dateColumn{
+			max-width:70px;
+		}
+		--padding-start:5px;
+	}
+}
+.done{
+	.icon{
+		color: var(--ion-color-primary-contrast);
+		background-color: var(--ion-color-primary);
+		ion-icon{
+			background-color: var(--ion-color-primary);
+			color: var(--ion-color-primary-contrast);
+
+		}
+	}
+}
+.ongoing{
+	.icon{
+		border:var(--ion-color-secondary) 2px solid;
+
+		color: var(--ion-color-secondary-contrast);
+		background-color: var(--ion-color-secondary);
+		ion-icon{
+			background-color: var(--ion-color-secondary);
+			color: var(--ion-color-secondary-contrast);
+
+		}
+	}
+}
+.todo{
+
+	
 }
 .selected{
-	background:var(--ion-color-primary);
-	color:var(--ion-color-primary-contrast);
+	color: var(--ion-color-primary-contrast);
+	background-color: var(--ion-color-primary);
 	font-weight: bold;
 	.icon{
-		background:var(--ion-color-primary);
-		border:var(--ion-color-primary-contrast) 2px solid;
 		text-align: center;
+		background-color: var(--ion-color-primary-contrast);
+		color: var(--ion-color-primary-contrast);
 		ion-icon{
 			font-size: 	20px;
 			margin-top:7px;
+			background-color: var(--ion-color-primary-contrast);
+			color: var(--ion-color-primary);
 		}
 	}
 	ion-note{
