--- a/src/app/project/executive/timeline/timeline.page.scss
+++ b/src/app/project/executive/timeline/timeline.page.scss
@@ -48,28 +48,29 @@
 {
 	background-color:  var(--ion-color-primary);	
 	background-image: -webkit-linear-gradient(45deg,
-	                                          rgba(255, 255, 255, .2) 25%,
-											  transparent 25%,
-											  transparent 50%,
-											  rgba(255, 255, 255, .2) 50%,
-											  rgba(255, 255, 255, .2) 75%,
-											  transparent 75%,
-											  transparent)
+		rgba(255, 255, 255, .2) 25%,
+		transparent 25%,
+		transparent 50%,
+		rgba(255, 255, 255, .2) 50%,
+		rgba(255, 255, 255, .2) 75%,
+		transparent 75%,
+		transparent)
 }
 
 
 .verticalTimeline{
-	border: 2px solid var(--ion-color-primary);
-    position: absolute;
-    left: 134px;
-    height: 100%;
-    background: var(--ion-color-primary);
+	width: 2px;
+	position: absolute;
+	left: 134px;
+	height: 100%;
+	background: var(--ion-color-primary);
 }
 
 .timelineContent{
 	--background: var(--ion-color-primary-tint);
 	color: var(--ion-color-primary-contrast);
 	height: calc(100% - 30px);
+	max-height: -webkit-fill-available;
 	width:50%;
 	min-width: 500px;
 	position: absolute;
@@ -83,8 +84,8 @@
 		color: var(--ion-color-primary-contrast);
 	}
 	ion-card-content{
-		--height: calc(100% - 200px);
-		height: calc(100% - 200px);
+	
+		max-height: -webkit-fill-available;
 	}
 	.block{
 		padding:5px;
@@ -96,8 +97,9 @@
 		height: inherit;
 	}
 	.tools{
-		height:-webkit-fill-available;
-		overflow:auto;
+		height: auto;
+		overflow: auto;
+		max-height: -webkit-fill-available;
 	}
 	.tool, .delivrable{
 		color:var(--ion-color-primary-contrast);
